# Calcuator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  CalculatorMode.h  CalculatorTests.cpp  CalculatorVisual.cpp  CalculatorVisual.rc  CalculatorVisual.sln  CalculatorVisual.vcxproj  CalculatorVisual.vcxproj.filters  Resource.h
